# CRM_2.0

./: .gitignore  00_START_HERE.txt  API_FIXES_REPORT_2025-10-24.md  Agents.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPLETION_REPORT_2025-10-24.md  COMPLETION_SUMMARY.md  CONTAINER_REBUILD_STATUS.md  CONTINUATION_NOTES.md  DEALS_HIERARCHY_STRUCTURE.md  DEAL_DETAIL_DIALOG_IMPLEMENTATION.md  DEAL_MANAGEMENT_REFACTOR.md  DEAL_WORKFLOW_API_INTEGRATION.md  DEAL_WORKFLOW_IMPLEMENTATION_REPORT.md  DEAL_WORKFLOW_INDEX.md  DEAL_WORKFLOW_QUICK_REFERENCE.md  DEAL_WORKFLOW_TESTING_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_RESULTS.txt  DEPLOYMENT_SUCCESS.txt  DEPLOYMENT_SUMMARY.txt  DESKTOP_APP_README.md  DEVELOPMENT_PROGRESS.md  DOCKER_RESTART_NEEDED.md  DOCUMENTATION_INDEX.md  EMPTY_TABS_FIX_REPORT.md  FEATURES_COMPLETION_REPORT.md  FEATURES_QUICK_START.md  FEATURE_2_COMPLETION_SUMMARY.md  FINAL_CHECKLIST.md  FINAL_STATUS_2025-10-24.txt  FINAL_SUMMARY.md  FINAL_SUMMARY.txt  FRONTEND_ANALYSIS_COMPLETE.md  FRONTEND_ANALYSIS_INDEX.md  FRONTEND_ANALYSIS_REPORT.md  FRONTEND_BACKEND_INTEGRATION_CHECKLIST.md  FRONTEND_COMPLETE_REPORT.md  FRONTEND_DEPLOYMENT_CHECKLIST.md  (+60 more)
backend/backup/: Dockerfile  README.md  pyproject.toml
backend/backup/backup/: config.py  db.py  main.py  models.py  notifications.py  service.py  storage.py  utils.py
backend/backup/backup/api/: routes.py  schemas.py
backend/backup/backup/executors/: consul.py  postgres.py  rabbitmq.py  redis.py
backend/backup/tests/: test_config.py  test_db.py  test_service.py  test_storage.py
backend/crm/: README.md  pyproject.toml
backend/crm/crm/api/: router.py  streams.py
backend/crm/crm/app/: celery_app.py  config.py  dependencies.py  events.py  main.py  notifications_consumer.py  tasks.py  workers.py
backend/crm/crm/domain/: schemas.py  services.py
backend/crm/crm/infrastructure/: db.py  events.py  models.py  notifications.py  queues.py  repositories.py  task_events.py
backend/crm/migrations/: README.md  env.py
backend/crm/migrations/versions/: 2024031501_baseline.py  2024031502_update_alembic_version_length.py  2024052701_add_next_review_at_to_deals.py  2024052801_add_next_review_at_to_deals.py  2024060101_add_permission_sync_jobs.py  2024061501_add_payments_module.py  2024062001_add_calculations.py  2024062001_add_deal_journal.py  2024062401_add_policy_documents.py  2024070101_add_payments_foreign_keys.py  2024071501_add_payments_tables.py  2024071801_remove_deal_value.py  2024072201_allow_null_owner_in_deals.py  2024072801_add_notifications.py  2025102501_remove_tenant_id.py  2025102601_add_tasks_module.py  2025102602_add_premium_to_policies.py  2025102602_allow_null_owner_in_clients.py  2025102603_allow_null_owner_in_clients.py  2025102604_migrate_crm_tasks_to_tasks_schema.py  2025102701_increase_alembic_version_length.py  2025103101_add_soft_delete_to_payments.py
backend/crm/tests/: conftest.py  test_api.py  test_calculations_api.py  test_deal_journal_api.py  test_deals_stage_metrics_api.py  test_notifications_api.py  test_payments_api.py  test_payments_events.py  test_policies_api.py  test_policy_documents_api.py  test_settings.py  test_tasks_api.py
backend/crm/tests/api/: test_streams.py
backend/crm/tests/app/: test_config.py  test_dependencies.py  test_events_subscriber.py  test_main.py  test_migrations_check.py  test_tasks.py
backend/crm/tests/domain/: test_calculation_service.py  test_deal_stage_mapping.py  test_payment_service.py  test_payment_sync_service.py  (+1 more)
backend/reports/: README.md  pyproject.toml
backend/reports/migrations/: 001_create_deal_pipeline_summary.sql
backend/reports/reports/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/telegram-bot/: README.md  pyproject.toml
backend/telegram-bot/telegram_bot/: __init__.py  app.py  config.py  main.py
(+977 files in other folders)
