[tool.poetry]
name = "crm-deals"
version = "0.1.0"
description = "CRM / Deals service for managing clients, deals, policies and tasks"
authors = ["CRM Team <crm@example.com>"]
packages = [{ include = "crm" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
celery = "^5.3.6"
aio-pika = "^9.4.0"
redis = "^5.0.1"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
httpx = { version = "^0.26.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
testcontainers = "^4.4.0"
anyio = "^4.3.0"
faker = "^24.0.0"

[tool.poetry.extras]
http = ["httpx"]

[tool.poetry.scripts]
crm-api = "crm.app.main:run"
crm-worker = "crm.app.workers:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
