[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot service for CRM quick actions and notifications"
authors = ["CRM Team <crm@example.com>"]
packages = [{ include = "telegram_bot" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
aio-pika = "^9.4.0"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
respx = "^0.20.2"
pytest-mock = "^3.12.0"
anyio = "^4.3.0"
fakeredis = { version = "^2.21.0", extras = ["aioredis"] }

[tool.poetry.scripts]
telegram-bot-main = "telegram_bot.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:aiogram.*",
]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
